--- a/views/presentation.html
+++ b/views/presentation.html
@@ -41,10 +41,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Title</h1>
-					<h3>Sub Title</h3>
+					<h1>Antonio</h1>
+					<h3>Santana</h3>
 					<p>
-						<small>footnote <a href="#">some link</a> </small>
+						<small>Ciência da Computação<a href="#">some link</a> </small>
 					</p>
 				</section>
 
